tests/miniJava/neg/006909_mutation.MiniJava
0 class java { public static void Main ( String [ ] java ) { { } } }
